# python

./: .gitignore  Pipenv.docx  demo.py  pyproject.toml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
.virtual_documents/mike-py/: Untitled.ipynb  matplotlib.ipynb  numpy.ipynb  vector_scalar_multi.ipynb
LearningPython/: HowToCreate_Condaenv  virtual-env.md
absp/learn/chapter02_flowcontrol/: oppositeday.py
absp/learn/chapter03_loops/: guessNumber.py
absp/learn/chapter07_dictionary/: characterCount.py
absp/projects/regexpy/: pyproject.toml
absp/projects/regexpy/src/: Regexp.ipynb  pattern.txt  regexpb.py
absp/projects/regexpy/src/regexplib/: __init__.py  regexpmod.py
absp/projects/regexpy/src/regexplib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
automate-boring-stuff/: .gigignore  .gitignore  pyproject.toml
automate-boring-stuff-with-python/learn/: pyproject.toml
automate-boring-stuff-with-python/learn/chapter02_flowcontrol/: dishonestcapacity.py
automate-boring-stuff-with-python/learn/chapter03_loops/: while.py
automate-boring-stuff-with-python/learn/chapter05_debugging/: assertions.py  toss.py
automate-boring-stuff-wth-python/learn/chapter06_lists/: list-enum.py
demo/: demo.py  show_recursion.py
mike-py/: Untitled.ipynb  matplotlib.ipynb  numpy.ipynb  vector_scalar_multi.ipynb
mike-py/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  numpy-checkpoint.ipynb
mike-py/.virtual_documents/: Untitled.ipynb
mysql/: cosmetics_app.py  cosmetics_ddl.sql  test.py
oracldb/src/: test.py
quick-python/: main.py  pyproject.toml
(+69 files in other folders)
